# racunalna-animacija

./: .gitignore  README.md
lab1/: CMakeLists.txt
lab1/assets/: rectangle.crv  wave.crv
lab1/dependencies/glad/include/glad/: glad.h
lab1/include/: main.hpp
lab1/scripts/: build.bat  build.sh  config.bat  run.bat
lab1/src/: main.cpp
lab1/src/headers/: Application.hpp  Assets.hpp  BSpline.hpp  Camera.hpp  Input.hpp  Mesh.hpp  Polyline.hpp  Renderer.hpp  Shader.hpp  Transform.hpp  Window.hpp
lab1/src/shaders/: polyline.vert
lab1/src/sources/: Application.cpp  Assets.cpp  BSpline.cpp  Camera.cpp  Input.cpp  Main.cpp  Mesh.cpp  Polyline.cpp  Renderer.cpp  Transform.cpp  Window.cpp
lab2/: CMakeLists.txt
lab2/dependencies/glad/include/glad/: glad.h
lab2/dependencies/glad/src/: glad.c
lab2/scripts/: build.bat  config.bat  run.bat
lab2/src/headers/: Application.hpp  Assets.hpp  Camera.hpp  ComputeShader.hpp  Input.hpp  PSProperties.hpp  ParticleSystem.hpp  RenderShader.hpp  Renderable.hpp  Renderer.hpp  Shader.hpp  Window.hpp
lab2/src/shaders/: birth.compute  deadreset.compute  life.compute  particlesystem.frag  render.frag  render.vert
lab2/src/sources/: Application.cpp  Assets.cpp  Camera.cpp  ComputeShader.cpp  Input.cpp  Main.cpp  ParticleSystem.cpp  RenderShader.cpp  Renderable.cpp  Renderer.cpp  Shader.cpp  Transform.cpp  Window.cpp
projekt/: Waverider.pptx
projekt/Waverider/Assets/Camera/: AdaptToCamera.cs  OrbitMovement.cs
projekt/Waverider/Assets/Floaters/: Barrel.fbx  Barrel.prefab  DynamicFloater.cs  Green.mat  Red.mat  Trash.cs  Yellow.mat
projekt/Waverider/Assets/Player/: BoatController.cs  TrashHandler.cs  fishing_boat.fbx
projekt/Waverider/Assets/Scenes/: Main.unity
projekt/Waverider/Assets/Water/: WaterSurface.cs
projekt/Waverider/Assets/Water/Materials/: Gerstner.mat
projekt/Waverider/Assets/Water/Shaders/Gerstner/: Gerstner Normal.shadersubgraph  Gerstner Position.shadersubgraph  Gerstner.hlsl  GerstnerShader.shadergraph
projekt/Waverider/Assets/Water/Shaders/Stylized/: Depth Fade.shadersubgraph  Movement.shadersubgraph
projekt/Waverider/Assets/Water/Utility/: GerstnerWave.cs  WaterAppearance.cs
projekt/Waverider/ProjectSettings/: ProjectSettings.asset  TagManager.asset
